--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,7 +17,7 @@ jobs:
         uses: einaregilsson/beanstalk@v18
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secret.AWS_SECRET_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: simple-engineer-deployment-tutorial
           environment_name: Simpleengineerdeploymenttutorial-env
           version_label: ${{ github.sha }}
