--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,7 +14,7 @@ jobs:
         run: zip -r deploy.zip * -x "**node_modules**"
         
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk@v18
+        uses: einaregilsson/beanstalk-deploy@v18
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
