--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,5 +21,5 @@ jobs:
           application_name: simple-engineer-deployment-tutorial
           environment_name: Simpleengineerdeploymenttutorial-env
           version_label: ${{ github.sha }}
-          region: us-west-2
+          region: us-east-1
           deployment_package: deploy.zip
